--- a/package.json
+++ b/package.json
@@ -1,11 +1,23 @@
 {
   "name": "react-news",
   "version": "0.1.0",
+  "homepage": "./",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "local-storage": "^2.0.0",
+    "node-sass": "^4.13.0",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-modal": "^3.11.1",
+    "react-modal-bootstrap": "^1.1.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "react-scroll-to": "^3.0.0-beta.3",
+    "react-sticky": "^6.0.3",
+    "react-use-localstorage": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
