--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "i18next": "^19.0.2",
+    "i18next-browser-languagedetector": "^4.0.1",
+    "i18next-xhr-backend": "^3.2.2",
     "local-storage": "^2.0.0",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
+    "react-i18next": "^11.2.6",
     "react-modal": "^3.11.1",
     "react-modal-bootstrap": "^1.1.1",
     "react-router-dom": "^5.1.2",
